--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/kkndo2/npm/issues"
   },
-  "homepage": "https://github.com/kkndo2/npm#readme"
+  "homepage": "https://github.com/kkndo2/npm#readme",
+  "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.16.2"
+  }
 }
