npm install --save-dev eslint-config-vue eslint-plugin-vue

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^4.1.0"
   }
 }
